// Copyright 2015 Google Inc. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.


// trying to represent a typical mix of datatypes:
// 1 array of 3 elements, each element: 1 string, 3 nested objects, 9 scalars
// root element has the array, additional string and an enum

syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package benchpb;

enum Enum { Apples = 0; Pears = 1; Bananas = 2; }

message ID {
  uint64 id = 1;
}

message Foo {
  uint64 id = 1;
  int32 count = 2;
  int32 prefix = 3;
  uint32 length = 4;
}

message Bar {
  Foo parent = 1;
  int32 time = 2;
  float ratio = 3;
  uint32 size = 4;
}

message FooBar {
  Bar sibling = 1;
  string name = 2;
  double rating = 3;
  uint32 postfix = 4;
}

message FooBarContainer {
  repeated FooBar list = 1;  // 3 copies of the above
  bool initialized = 2;
  Enum fruit = 3;
  string location = 4;
}

service FooBarService {
  rpc GetFoo(ID) returns (Foo) {}
  rpc GetBar(ID) returns (Bar) {}
  rpc GetFooBar(ID) returns (FooBar) {}
  rpc GetFooBarContainer(ID) returns (FooBarContainer) {}
}